--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Issat Hackathon</title>
   </head>
   <body class="h-screen">
-    <div id="root" class="h-screen dark:bg-gray-900"></div>
+    <div id="root" class="h-screen"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
